Microservicios-Multicontenedores-redes/kubernetes/division-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: division-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: division
  template:
    metadata:
      labels:
        app: division
    spec:
      containers:
      - name: division
        image: division:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: division
spec:
  selector:
    app: division
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
