Microservicios-Multicontenedores-redes/kubernetes/ecuacion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecuacion-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecuacion
  template:
    metadata:
      labels:
        app: ecuacion
    spec:
      containers:
      - name: ecuacion
        image: ecuacion:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ecuacion
spec:
  selector:
    app: ecuacion
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30003
  type: NodePort
