Microservicios-Multicontenedores-redes/kubernetes/resta-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resta-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resta
  template:
    metadata:
      labels:
        app: resta
    spec:
      containers:
      - name: resta
        image: resta:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: resta
spec:
  selector:
    app: resta
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
