Microservicios-Multicontenedores-redes/kubernetes/suma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suma-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: suma
  template:
    metadata:
      labels:
        app: suma
    spec:
      containers:
      - name: suma
        image: suma:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: suma
spec:
  selector:
    app: suma
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
